[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/L2_lab/star_button2.png" type="Texture" id=1]
[ext_resource path="res://sprites/L2_lab/star_button0.png" type="Texture" id=2]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/1.0 - Lab/star_button.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.9736

[node name="StarButton" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PlayerDetectionZone"]
